--- a/components/Navbar/NavbarDesktop.module.scss
+++ b/components/Navbar/NavbarDesktop.module.scss
@@ -20,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 15%;
+    width: 100%;
 
     li {
       margin: 30px 0;
