--- a/components/Settings/Settings.module.scss
+++ b/components/Settings/Settings.module.scss
@@ -2,11 +2,10 @@
 
 .container {
   background-color: $dark-background-color;
-  height: 100vh;
-  margin-bottom: $desktop-navbar-width;
+  height: 100%;
+  overflow: scroll;
 
   @media (min-width: 999px) {
-    position: fixed;
     margin-left: $desktop-navbar-width;
     width: 300px;
   }
