--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,3 +6,4 @@ $dark-background-color: #262626;
 $light-background-text-color-primary: rgb(173, 181, 189);
 $light-background-text-color-secondary: rgb(225, 225, 225);
 $desktop-navbar-width: 72px;
+$mobile-navbar-height: 72px;
